<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/detail_background"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="281sp">

            <ImageView
                android:id="@+id/projectImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/project_image_placeholder"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic"/>

            <Button
                android:id="@+id/backButton"
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:layout_marginTop="54sp"
                android:layout_marginStart="8sp"
                android:background="@drawable/baseline_arrow_back_ios_24"
                android:contentDescription="@string/back_button_description" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="24sp"
            android:paddingHorizontal="16sp">

            <TextView
                android:id="@+id/priceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/price_listing_placeholder"
                android:textColor="@color/title_text"
                android:textSize="23sp"
                android:textStyle="bold"
                android:fontFamily="@font/avenir_next_pro"/>

            <TextView
                android:id="@+id/projectNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/priceTV"
                android:layout_alignStart="@+id/priceTV"
                android:layout_marginTop="24sp"
                android:fontFamily="@font/avenir_next_pro"
                android:text="@string/project_name_placeholder"
                android:textColor="@color/title_text"
                android:textSize="19sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/projectNameTV"
                android:layout_alignStart="@+id/projectNameTV"
                android:layout_marginStart="0dp"
                android:layout_marginTop="12sp"
                android:fontFamily="@font/avenir_next_pro"
                android:text="@string/title_placeholder"
                android:textColor="@color/title_text"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/subtitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTV"
                android:layout_alignStart="@+id/titleTV"
                android:layout_marginStart="0dp"
                android:layout_marginTop="2sp"
                android:fontFamily="@font/avenir_next_pro"
                android:text="@string/subtitle_placeholder"
                android:textColor="@color/title_text"
                android:textSize="14sp"
                />

            <LinearLayout
                android:id="@+id/map_button_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitleTV"
                android:layout_alignStart="@+id/subtitleTV"
                android:layout_marginStart="0dp">
                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="16sp"
                    android:contentDescription="@string/map_icon"
                    android:src="@drawable/location_pin"
                    android:elevation="0dp"
                    android:layout_marginEnd="1sp"
                    />
                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:elevation="0dp"
                    android:id="@+id/mapButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_pro"
                    android:text="@string/map_title"
                    android:textAllCaps="false"
                    android:textColor="@color/link_color"
                    android:textSize="14sp"
                    android:background="@color/detail_background"
                    android:textStyle="bold">
                </Button>
            </LinearLayout>

            <ImageView
                android:id="@+id/bedImageView"
                android:layout_width="16sp"
                android:layout_height="16sp"
                android:layout_below="@+id/map_button_layout"
                android:layout_alignStart="@+id/map_button_layout"
                android:contentDescription="@string/bed_icon"
                android:src="@drawable/bedroom" />

            <TextView
                android:id="@+id/bedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/bedImageView"
                android:layout_marginStart="8sp"
                android:layout_marginBottom="-3sp"
                android:layout_toEndOf="@+id/bedImageView"
                android:fontFamily="@font/avenir_next_pro"
                android:text="@string/bed_placeholder"
                android:textColor="@color/title_text"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/bathImageView"
                android:layout_width="16sp"
                android:layout_height="16sp"
                android:layout_alignTop="@+id/bedImageView"
                android:layout_marginStart="10sp"
                android:layout_toEndOf="@+id/bedTextView"
                android:contentDescription="@string/bed_icon"
                android:src="@drawable/bathroom" />
            <TextView
                android:id="@+id/bathTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/bathImageView"
                android:layout_marginStart="8sp"
                android:layout_marginBottom="-3sp"
                android:layout_toEndOf="@+id/bathImageView"
                android:fontFamily="@font/avenir_next_pro"
                android:text="@string/bath_placeholder"
                android:textColor="@color/title_text"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/areaSizeImageView"
                android:layout_width="16sp"
                android:layout_height="16sp"
                android:layout_alignTop="@+id/bedImageView"
                android:layout_marginStart="10sp"
                android:layout_toEndOf="@+id/bathTextView"
                android:contentDescription="@string/bed_icon"
                android:src="@drawable/sqft" />
            <TextView
                android:id="@+id/areaSizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/areaSizeImageView"
                android:layout_marginStart="8sp"
                android:layout_marginBottom="-3sp"
                android:layout_toEndOf="@+id/areaSizeImageView"
                android:fontFamily="@font/avenir_next_pro"
                android:text="@string/area_placeholder"
                android:textColor="@color/title_text"
                android:textSize="16sp" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginStart="16sp"
            android:background="@color/line_color"/>

       <LinearLayout
           android:layout_marginStart="16sp"
           android:id="@+id/detailContainer"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <LinearLayout
               android:id="@+id/detailLineContainer"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"/>
       </LinearLayout>
        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginStart="16sp"
            android:layout_marginTop="24sp"
            android:background="@color/line_color"/>
        <TextView
            android:id="@+id/descriptionTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12sp"
            android:layout_marginTop="24sp"
            android:fontFamily="@font/avenir_next_pro"
            android:text="Description"
            android:textColor="@color/title_text"
            android:textSize="19sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12sp"
            android:layout_marginTop="12sp"
            android:fontFamily="@font/avenir_next_pro"
            android:lineHeight="28sp"
            android:text="@string/description_placeholder"
            android:textColor="@color/title_text"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>